<resources>
    <string name="app_name">SecretSantaCourseWork</string>
    <string name="title_activity_main_menu">MainActivity</string>
    <string name="title_home">Профиль</string>
    <string name="title_list_game">Игры</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Логин (email):</string>
    <string name="password">Пароль:</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="registration">Регистрация</string>
    <string name="registration_name">Ваше имя или псевдоним</string>
    <string name="e_mail_sign_up">E-mail</string>
    <string name="come_up_sign_up_password">Придумайте пароль</string>
    <string name="repeat_sign_up_password">Повторите пароль</string>
    <string name="agree_with_project_rules">Я согласен с <u>правилами проекта </u></string>
    <string name="get_news_e_mail">Я хочу получать рассылку о новостях проекта на e-mail</string>
    <string name="our_data_label">Ваши данные</string>
    <string name="surname_edit">Фамилия</string>
    <string name="name_edit">Имя:</string>
    <string name="middle_name_edit">Отчество</string>
    <string name="telephone_edit">Телефон</string>
    <string name="city_edit">Город</string>
    <string name="save_edit">Сохранить</string>
    <string name="dont_fill_field_name_hint">Не заполнено поле Имя</string>
    <string name="dont_fill_field_email_hint">Не заполнено поле Логин</string>
    <string name="dont_fill_correct_field_email_hint">Неверно введен e-mail</string>
    <string name="dont_fill_field_password_hint">Не заполнено поле Пароль</string>
    <string name="dont_equals_repeat_password_hint">Введенные пароли не совпадают</string>
    <string name="sign_in_toast">Вход</string>
    <string name="sign_in_error_toast">Не завершена загрузка данных. Войдите повторно.</string>
    <string name="sign_in_error_fields_empty_toast">Введите пароль и логин</string>
    <string name="sign_in_error_field_login_empty_toast">Введите логин</string>
    <string name="sign_in_errror_field_password_empty_toast">Введите пароль</string>
    <string name="sign_in_errror_incorrect_data_toast">Проверьте корректность данных</string>
    <string name="sign_up_error_user_exsist_toast">Пользователь уже есть в системе</string>
    <string name="sign_up_registration_sucsess_toast">Регистрация прошла успешно</string>
    <string name="hobby">Хобби</string>
    <string name="button_change">изменить</string>
    <string name="name_game">Название игры</string>
    <string name="count_peoples">кол-вл игроков</string>
    <string name="add_people_in_game">Добавить игроков</string>
    <string name="add_game">Добавить игру</string>
    <string name="add_change_game">Сохранить измененную игру</string>
    <string name="date_start_game">Дата начала игры</string>
    <string name="date_end_game">Дата конца игры</string>
    <string name="generate_again_button">Повторная генерация</string>
    <string name="description_game">Для создания игры нажми на красную кнопку! Заполни все поля, добавь игроков и запусти Тайного Санту!</string>
    <string name="write_your_hobbies">write your hobbies</string>
    <string name="data_is_selected">выбрана</string>
    <string name="datapicker_is_closed">\" закрыт\"</string>
    <string name="data_picker_is_closed">Date Picker закрыт</string>
    <string name="attantion_toast_count_gamers">Игроков должно быть минимум 2</string>
    <string name="toast_dont_fill_field">вы заполнили не все поля</string>
    <string name="title_pair">Пара</string>
    <string name="title_game_pair">Игровая пара</string>
    <string name="see_my_pair_button">Посмотреть мою пару</string>
    <string name="name_gamer_text_view">Имя игрока</string>
    <string name="delete_button" translatable="false">Удалить</string>
</resources>