<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_new_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.game.AddNewGameFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/datePickerStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_game_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/name_game"
            android:padding="15dp"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/datePickerStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/datePickerEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_game">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/datePickerStartTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:calendarViewShown="false"
            android:hint="@string/date_start_game"
            android:spinnersShown="true"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/datePickerEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/people_add_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePickerStart">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/datePickerEndTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:calendarViewShown="false"
            android:hint="@string/date_end_game"
            android:spinnersShown="true"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/people_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePickerEnd">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:listitem="@layout/item_people_in_game" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="15dp"
        android:text="@string/add_game"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/people_add_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>